--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,14 @@
 sudo: false
 language: python
 virtualenv:
-  system_site_packages: true
+  system_site_packages: false
 env:
   matrix:
-    - DISTRIB="ubuntu" PYTHON_VERSION="2.7" COVERAGE="true"
-    - DISTRIB="conda" PYTHON_VERSION="2.7" COVERAGE="false"
-    - DISTRIB="conda" PYTHON_VERSION="3.3" COVERAGE="false"
-    - DISTRIB="conda" PYTHON_VERSION="3.4" COVERAGE="false"
+    # - DISTRIB="ubuntu" PYTHON_VERSION="2.7" COVERAGE="true"
+    # - DISTRIB="conda" PYTHON_VERSION="2.7" COVERAGE="false"
+    # - DISTRIB="conda" PYTHON_VERSION="3.3" COVERAGE="false"
+    - DISTRIB="conda" PYTHON_VERSION="3.5" COVERAGE="false"
+    - DISTRIB="ubuntu" PYTHON_VERSION="3.5" COVERAGE="false"
 addons:
   apt:
     packages:
@@ -19,12 +20,14 @@ addons:
       - python-pip
 install:
   - source tests/travis_install.sh
+  - pip install --upgrade pip
   - pip install -r requirements.txt
 before_script:
   - git config --global user.email "you@example.com"
   - git config --global user.name "Your Name"
 script:
-  - python setup.py test
+  - python manage.py test
+  # - python setup.py test
 after_success:
   - if [[ "$COVERAGE" == "true" ]]; then coveralls || echo "failed"; fi
 cache:
