--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # Add your requirements here like:
-# numpy
-# scipy>=0.9
-django
+django==1.11.4
+django-extensions==1.8.1
+djangorestframework==3.6.3
